Fix message z-index (overlaps search)

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -70,6 +70,7 @@ button {
 
 .floating-message {
     position: relative;
+    z-index: -1;
 }
 
 .floating-message .alert {
